results/SVCOMP/houdini/log-StringBuilderChars06-2024_03_19_04_48_50.txt
public class StringBuilderChars06 {
  //@ non_null
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures arg == null ==> \result;
  //@ ensures arg == null ==> !\result;
  //@ ensures arg != null ==> \result;
  //@ ensures arg != null ==> !\result;
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    buffer.reverse();
    return buffer.toString().equals("detimiL eTlBffiiH");
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("#$%^&*123");
    f("#$%^#*123");
    f("fsgdhj");
    f("DiffBlue L1mitted");
    f("DiffBlue Limitted");
    f("HiiffblTe Limited");
    f("");
  }
}


/home/max/Documents/JMLGPT/tmp/StringBuilderChars06.java:2: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
1 error

public class StringBuilderChars06 {
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures arg == null ==> \result;
  //@ ensures arg == null ==> !\result;
  //@ ensures arg != null ==> \result;
  //@ ensures arg != null ==> !\result;
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    buffer.reverse();
    return buffer.toString().equals("detimiL eTlBffiiH");
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("#$%^&*123");
    f("#$%^#*123");
    f("fsgdhj");
    f("DiffBlue L1mitted");
    f("DiffBlue Limitted");
    f("HiiffblTe Limited");
    f("");
  }
}


OpenJML not responding. Aborted.
